--- a/eightBall.css
+++ b/eightBall.css
@@ -21,6 +21,9 @@ body {
 .typytypy {
 	font-size: 25px;
 }
+.neon {
+	text-shadow: 0 0 4px #ff99ff, 0 0 6px #9999ff;
+}
 /*-------------question box END--------------*/
 /*-------------ball box--------------*/
 .ball {
@@ -33,11 +36,14 @@ body {
   	border-radius: 200px;
   	margin: auto;
 }
+.glowing {
+	box-shadow: 0 0 20px 10px #ff99ff, 0 0 40px 20px #9999ff;
+}
 .answer {
 	display: block;
 	font-size: 25px;
 	text-align: center;
-	align-self: : center;
+	align-self: center;
 	width: 250px;
 	height: 100px;
 	background-color: none;
@@ -61,8 +67,3 @@ body {
 	align-self: center;
 }
 /*-------------ball box END--------------*/
-
-
-
-
-
